2004-11-08  Matthias Clasen  <mclasen@redhat.com>

	* tests/testfilechooserbutton.c (main): Disable the SAVE 
	and CREATE_FOLDER modes.  (#157675, Christian Persch)

	* gtk/gtkaboutdialog.c (gtk_about_dialog_set_website): Hide the
	website button if the url is unset.  (#157630, John Finlay)

	* gtk/gtkaboutdialog.[hc]: Change the return types of the 
	gchar ** getters to be more const correct.  (#157566, Mariano 
	Suárez-Alvarez)

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_init): Add
	uri targets before text targets, to make file dnd work 
	better.  (#157651, Christian Persch)

	* gtk/gtktreedatalist.c: Support columns whose declared type is
	an interface better, by treating them like G_TYPE_OBJECT if
	the interface types requires G_TYPE_OBJECT.

2004-11-08  Bastien Nocera  <hadess@hadess.net>

	* gtk/stock-icons/stock_media_play_rtl_16.png:
	* gtk/stock-icons/stock_media_play_rtl_24.png: add the icons again
	with the binary flag (Closes: #157665)

2004-11-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilefilter.h:
	* gtk/gtkfilefilter.c (gtk_file_filter_add_pixbuf_formats): 
	New convenience function to add a filter for image files
	which can be loaded by GdkPixbuf. (#145388, Anders Carlsson)

	* tests/testfilechooser.c: Test the image filter.
	
	* gtk/gtkmenu.c (menu_change_screen): Remove some warnings.

	Show files in folder modes. (#157013, Nickolay V. Shmyrev)
	
	* gtk/gtkfilechooserdefault.c (create_file_list): Use a selection
	function to determine which rows can be selected.
	(update_appearance): Always show files. Also queue a redraw.
	(set_list_model): Always show files.
	(list_select_func): The selection function used for the file list.
	Don't allow to select files when in select/create folder mode.
	(list_row_activated): Don't activate files in folder modes.
	(list_icon_data_func, list_mtime_data_func, list_size_data_func): 
	Render files insensitive in folder modes.

2004-11-06  Matthias Clasen  <mclasen@redhat.com>
